Added Exploit Resources

--- a/resources.html
+++ b/resources.html
@@ -144,6 +144,26 @@
 				</li>
 
                         <p class="lead section-lead">Exploit</p>
+				<p>Online Resources:</p>
+				<li>
+					<a href="http://opensecuritytraining.info/Exploits1.html">opensecuritytraining: Exploits1</a>
+				</li>
+				<li>
+					<a href="http://phrack.org/issues/49/14.html">Smashing the Stack for Fun and Profit</a>
+				</li><br>
+				<p>Wargames:</p>
+				<li>
+					<a href="http://smashthestack.org/">SmashTheStack (online)</a>
+				</li>
+				<li>
+					<a href="http://overthewire.org/wargames/narnia/">OverTheWire: Narnia (online)</a>
+				</li>
+				<li>
+					<a href="http://overthewire.org/wargames/behemoth/">OverTheWire: Behemoth (online)</a>
+				</li>
+				<li>
+					<a href="https://exploit-exercises.com/protostar/">Protostar: stack, heap, format (VM/offline)</a>
+				</li>
 
                         <p class="lead section-lead">Web</p>
 
