Added art sections to exploit resources

--- a/resources.html
+++ b/resources.html
@@ -151,6 +151,10 @@
 				<li>
 					<a href="http://phrack.org/issues/49/14.html">Smashing the Stack for Fun and Profit</a>
 				</li><br>
+				<p>Books:</p>
+				<li>
+					<a href"https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Art of Exploitation: Sections: Exploitation (duh), Shellcode, Countermeasures</a>
+				</li><br>
 				<p>Wargames:</p>
 				<li>
 					<a href="http://smashthestack.org/">SmashTheStack (online)</a>
