Added relevant sections to art of exploitation

--- a/resources.html
+++ b/resources.html
@@ -153,8 +153,9 @@
 				</li><br>
 				<p>Books:</p>
 				<li>
-					<a href"https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Art of Exploitation: Sections: Exploitation (duh), Shellcode, Countermeasures</a>
-				</li><br>
+					<a href"https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Hacking, The Art of Exploitation</a>
+				</li>
+				<p>Relevant Chapters, Sections:<br>Exploitation 0x300<br>Shellcode 0x500<br>Countermeasures, Buffer Restrictions 0x690 - Randomized Stack Space 0x6c5<br> 
 				<p>Wargames:</p>
 				<li>
 					<a href="http://smashthestack.org/">SmashTheStack (online)</a>
