Changed Exploit to Native Exploit

--- a/resources.html
+++ b/resources.html
@@ -143,7 +143,7 @@
 					<a href"https://www.amazon.com/Reversing-Secrets-Engineering-Eldad-Eilam/dp/0764574817">Reversing, The Secrets of Reverse Engineering</a>
 				</li>
 
-                        <p class="lead section-lead">Exploit</p>
+                        <p class="lead section-lead">Native Exploit</p>
 				<p>Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/Exploits1.html">opensecuritytraining: Exploits1</a>
@@ -189,7 +189,10 @@
 				</li>
 				<li>
                                         <a href="https://www.youtube.com/watch?v=EBQIGy1ROLY">MIT OpenCourseWare: Securing Web Apps</a>
-                                </li><br>
+                                </li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=S2iBR2ZlZf0">MIT OpenCourseWare: SSL and HTTPS</a>
+				</li><br>
 				<p>Books:</p>
 				<li>
 					<a href="https://www.amazon.com/Web-Application-Hackers-Handbook-Exploiting/dp/1118026470">Web Application Hacker's Handbook</a>
@@ -224,6 +227,9 @@
 				<p>Online Resources: *More to add to this section</p>
 				<li>
 					<a href="https://www.owasp.org/index.php/Guide_to_Cryptography">OWASP: Guide to Cryptography</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=9TNI2wHmaeI">MIT OpenCourseWare: Cryptography: Encryption</a>
 				</li>
 				<li>
 					<a href="https://www.youtube.com/watch?v=iQsKdtjwtYI">Applied Crypto: How SSL/TLS works with HTTPS</a>
