--- a/resources.html
+++ b/resources.html
@@ -145,6 +145,7 @@
 				</li>
 
                         <p class="lead section-lead">Native Exploit</p>
+				<p class="section-paragraph"><a href="topics-exploit.html">List of Topics to Know and Research</a></p>
 				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/Exploits1.html">opensecuritytraining: Exploits1</a>
